# StenLib

./: .deepsource.toml  .gitignore  .pypirc  MANIFEST.in  README.md  compose-dev.yaml  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt  setup.bat  setup.cfg  setup.ps1  setup.py  setup_venv.py
.circleci/: config.yml
.devcontainer/: devcontainer.json  dockerfile  install.sh  requirements.txt
.github/scripts/: get_version.py
.github/workflows/: build-release-upload.yml  py_ci_cd.yml  py_deploy.yml  setup_py_ci_cd.yml  upload-to-pypi.yml  upload-to-testpypi.yml
QeLib/: QeBaseClass.py  QeBaseClass.pyi  QeDataBase.py  QeDataBase.pyi  QeHelper.py  QeHelper.pyi  QeSettings.py  QeSettings.pyi  QeUtils.py  main.py  test.py
QeLib/data/: database.sqlite  lumber_types.json
StenLib/: StenDataBase.py  StenEnumUtils.py  StenHelper.py  StenUtils.py
StenLib/docs/: conf.py
StenLib/docs/_build/doctrees/: StenLib.doctree  environment.pickle  index.doctree  modules.doctree
StenLib/tests/: test_StenUtils.py
StenLib/tests/reports/: pytest_report.xml
others/: TODO.md
scripts/: setup_pip_packages.ps1  setup_pytests.ps1  setup_python.ps1  setup_tests.ps1  setup_venv.ps1
scripts/generators/: unittest_generator.py
src/: main.py  setup.py
src/StenLib/: StenHelper.py  __init__.py
src/helpers/: helpers.py
templates/: test_template.py
tests/: QeDataBaseTests.py  QeDataBase_test.py  QeHelper_test.py  StenDataBase_test.py  StenEnumUtils_test.py  StenEnums_test.py  StenUtils_test.py  TODO  test_StenDataBase.py  test_StenEnumUtils.py  test_StenUtils.py
(+15 files in other folders)
