[metadata]
name = QeLib
version = 0.0.19

long_description = file: README.md
long_description_content_type = text/markdown
license = LICENSE.md
url = https://github.com/Illyrius666/QeLib
project_urls =
    Bug Tracker = https://github.com/Illyrius666/QeLib/issues

[options]
install_requires = 
    twine
    wheel
    pyside6
    shiboken6

packages = find:
python_requires = >=3.11.5

[options.package_data]
QeLib = *.pyi
